[project]
name = "omada-ip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tplink-omada-client>=1.4.4",
    "typer>=0.26.8",
]

[project.scripts]
omada-ip = "omada_ip.cli:app"

[tool.uv]
package = true
